# usb-video

./: CHANGELOG.md  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/meta/usbvideo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RingBuffer.h  UsbAudioStreamer.cpp  UsbAudioStreamer.h  UsbVideoNativeLibrary.cpp  UsbVideoStreamer.cpp  UsbVideoStreamer.h  aaudio_type_conversion.h  clog.h  native-lib.cpp
app/src/main/cpp/libusb/: CMakeLists.txt
app/src/main/cpp/libuvc/: CMakeLists.txt
app/src/main/cpp/libuvc/libuvc-master/: CMakeLists.txt
app/src/main/cpp/libuvc/libuvc-master/src/: device.c
app/src/main/cpp/libyuv/: CMakeLists.txt
app/src/main/java/com/meta/usbvideo/: StatusScreenViewHolder.kt  StreamerActivity.kt  StreamerScreensAdapter.kt  StreamerViewModel.kt  StreamerViewModelFactory.kt  StreamingViewHolder.kt  UsbVideoApplication.kt  UsbVideoNativeLibrary.kt
app/src/main/java/com/meta/usbvideo/animation/: ZoomOutPageTransformer.kt
app/src/main/java/com/meta/usbvideo/eventloop/: EventLooper.kt
app/src/main/java/com/meta/usbvideo/permission/: CameraPermissionState.kt  PermissionStatus.kt  Permissions.kt  PermissionsViewModel.kt  PermissionsViewModelFactory.kt  RecordAudioPermissionState.kt
app/src/main/java/com/meta/usbvideo/ui/: VideoContainerView.kt
app/src/main/java/com/meta/usbvideo/usb/: AudioStreamingConnection.kt  UsbDescriptorParser.kt  UsbDeviceState.kt  UsbMonitor.kt  VideoStreamingConnection.kt
app/src/main/res/drawable/: sharp_speed_48.xml  status_bg.xml
app/src/main/res/drawable-anydpi/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_round.xml
app/src/main/res/layout/: activity_streamer.xml  status_screen.xml  streaming_screen.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings_untranslated.xml  themes.xml
app/src/main/res/xml/: uvc_device_filter.xml
app/src/test/java/com/meta/usbvideo/usb/: UsbDecriptorsData.kt  VideoStreamingConnectionTests.kt
gradle/wrapper/: gradle-wrapper.properties
